# axo-drive

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README-en.md  README.md
.github/workflows/: docker.yml  publish.yml  release.yml
docs/: CONCURRENCY_LOCKING.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  constants.ts  i18n.ts  index.css  types.ts  utils.ts
frontend/src/components/: AuthCheckingScreen.tsx  CreateFolderModal.tsx  DeleteConfirmModal.tsx  FilesTable.tsx  ImagePreviewModal.tsx  LoginLogo.tsx  LoginScreen.tsx  UploadConflictModal.tsx  VideoPreviewModal.tsx
scripts/: build.sh  build_docker.sh
src/: atomic.rs  auth.rs  background.rs  config.rs  error.rs  etag.rs  files.rs  frontend.rs  http.rs  locking.rs  logging.rs  main.rs  storage.rs  tls.rs  upload.rs  version.rs  webdav.rs  webdav_lock.rs
