[package]
name = "axo-drive"
version = "0.0.1"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
cookie = "0.18"
tokio = { version = "1", features = ["full"] }
dav-server = { version = "0.8", features = ["localfs"] }
rust-embed = "8"
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
http-body-util = "0.1"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
httpdate = "1"
clap = { version = "4.5", features = ["derive", "env"] }
shadow-rs = { version = "1.4.0", features = ["metadata"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rcgen = "0.13"

[build-dependencies]
shadow-rs = { version = "1.4.0" }

[dev-dependencies]
tempfile = "3"

[profile.release]
debug = false
strip = true
lto = true
panic = "abort"
